[gd_scene load_steps=14 format=3 uid="uid://m32n7akyixp5"]

[ext_resource type="Script" path="res://Combat/unit_spot.gd" id="1_ls624"]
[ext_resource type="Script" path="res://Combat/Units/unit_area_2d_node.gd" id="2_8rv1h"]
[ext_resource type="Texture2D" uid="uid://dnao7cqp8wxhw" path="res://Arts/Combat effects/white circle .png" id="3_a7gns"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ax4nd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0e3n5"]
atlas = ExtResource("3_a7gns")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bq4i"]
atlas = ExtResource("3_a7gns")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hdi3"]
atlas = ExtResource("3_a7gns")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko2e4"]
atlas = ExtResource("3_a7gns")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fskye"]
atlas = ExtResource("3_a7gns")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v35fi"]
atlas = ExtResource("3_a7gns")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trgmh"]
atlas = ExtResource("3_a7gns")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv6vu"]
atlas = ExtResource("3_a7gns")
region = Rect2(0, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_v8jbf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e3n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bq4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hdi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko2e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fskye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v35fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trgmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv6vu")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="Spot" type="Node2D"]
script = ExtResource("1_ls624")

[node name="Area2D2" type="Area2D" parent="."]
monitoring = false
monitorable = false
script = ExtResource("2_8rv1h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_ax4nd")

[node name="HighlightAnimation" type="AnimatedSprite2D" parent="Area2D2"]
visible = false
sprite_frames = SubResource("SpriteFrames_v8jbf")
autoplay = "default"

[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D2" to="Area2D2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="Area2D2" method="_on_mouse_exited"]
